tests/valid_programs/keyof/simple.duck
use std::io::{println};

fn main() {
    let x: keyof { username: String } = .username;
    println("success: let x: keyof { username: String } = .username;");
}
