tests/errors/keyof/generic_fn_return_with_wrong_tag.duck
fn with_keyof_return<T>(val: keyof T) -> keyof T {
    return val;
}

fn main() {
    let x = with_keyof_return<{ username: String }>(.other);
}
